# FastAPI-CRUD

./: .env.example  .gitignore  README.MD  cli.py  pyproject.toml
migrations/: env.py
src/: main.py
src/apps/blog/: __init__.py
src/apps/blog/models/: post.py
src/apps/blog/repositories/: post_repository.py
src/apps/blog/routers/: post_router.py
src/apps/blog/schemas/: post.py
src/apps/blog/services/: post_service.py
src/core/: FieldParser.py  config.py  database.py  exceptions.py
src/core/bases/: base_repository.py  base_router.py  base_service.py
src/core/response/: handlers.py  schemas.py
src/core/schemas/: fields.py
src/core/services/: field_service.py
src/core/utils/: utils.py
src/shared/: models.py
