[project]
name = "mutor"
version = "0.1.0"
description = ""
authors = [{ name = "ghaziriyadh", email = "ghaziriyadh2@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "alembic (>=1.16.1,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "dependency-injector (>=4.47.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "faker (>=37.3.0,<38.0.0)",
    "poetry-core (>=2.1.3,<3.0.0)",
    "polyfactory (>=2.21.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "firebase-admin (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
